Always use fresh/non-cached copies of accounts when making modifications